2006-08-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_logo_mode),
	(bacon_video_widget_set_scale_ratio): Make sure we can't call
	_set_scale_ratio when the logo mode is on, but still make sure
	->video_width and ->video_height are set (Closes: #348184)

2006-08-03  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_num_entries),
	(totem_pl_parser_write_pls), (totem_pl_parser_write_m3u),
	(totem_pl_parser_write_xspf): Use gtk_tree_model_iter_nth_child instead
	of gtk_tree_model_get_iter_from_string, as pointed out by
	Tim-Philipp Müller (<tim at centricular dot net> (Closes: #349678)

2006-08-02  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: Default for the vcodec is N/A, not Unknown

2006-08-02  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_num_entries),
	(totem_pl_parser_write_pls), (totem_pl_parser_write_m3u),
	(totem_pl_parser_write_xspf): add more checks to the retval of
	gtk_tree_model_get_iter_from_string(), reported by
	Kjartan Maraas <kmaraas@gnome.org> (Closes: #349678)

2006-08-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-viewer.c: make sure totem-interface.c is included
	first, so config.h is included at the earliest

2006-08-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: Add some known subdirs to the include paths to
	work-around some .pc files not having the subdirs in the cflags
	(Closes: #349651)

============ Version 1.5.90

2006-07-26  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 1.5.90
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_scale_ratio): avoid resizing if we're already
	the right size

2006-07-24  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_update_stream_info), (bvw_handle_application_message),